<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timelines"
            android:title="Timelines" />
        <item
            android:id="@+id/nav_quiz"
            android:title="Quiz" />
        <item
            android:id="@+id/nav_search"
            android:title="Search" />
    </group>

</menu>